--- a/common/Makefile
+++ b/common/Makefile
@@ -190,6 +190,8 @@ COBJS-$(CONFIG_UPDATE_TFTP) += update.o
 COBJS-$(CONFIG_USB_KEYBOARD) += usb_kbd.o
 endif
 
+COBJS-$(CONFIG_FASTBOOT) += cmd_fastboot.o
+
 ifdef CONFIG_SPL_BUILD
 COBJS-$(CONFIG_SPL_YMODEM_SUPPORT) += xyzModem.o
 endif
