ARM sunxi: a13_mid board definition
From:    Jari Helaakoski <tekkuli@gmail.com>
Signed-off-by: Jari Helaakoski <tekkuli@gmail.com>
Signed-off-by: Henrik Nordstrom <henrik@henriknordstrom.net>

--- a/boards.cfg
+++ b/boards.cfg
@@ -288,6 +288,7 @@ whistler                     arm         armv7:arm720t whistler          nvidia 
 colibri_t20_iris             arm         armv7:arm720t colibri_t20_iris  toradex        tegra20
 u8500_href                   arm         armv7       u8500               st-ericsson    u8500
 snowball                     arm         armv7       snowball               st-ericsson    u8500
+a13_mid                      arm         armv7       sunxi               -              sunxi       sun5i:A13_MID,SPL,BOARD_NAME="A13_MID"
 a13_olinuxino                arm         armv7       sunxi               -              sunxi       sun5i:A13_OLINUXINO,SPL,BOARD_NAME="A13-OlinuXino"
 cubieboard                   arm         armv7       sunxi               -              sunxi       sun4i:CUBIEBOARD,SPL,BOARD_NAME="Cubieboard"
 cubieboard_512               arm         armv7       sunxi               -              sunxi       sun4i:CUBIEBOARD_512,SPL,BOARD_NAME="Cubieboard-512"
