ARM sunxi: add mini-x board SPL support
From: Jari Helaakoski <tekkuli@gmail.com>
Signed-off-by: Jari Helaakoski <tekkuli@gmail.com>
Signed-off-by: Henrik Nordstrom <henrik@henriknordstrom.net>

--- a/boards.cfg
+++ b/boards.cfg
@@ -293,7 +293,9 @@ a13_olinuxino                arm         armv7       sunxi               -      
 cubieboard                   arm         armv7       sunxi               -              sunxi       sun4i:CUBIEBOARD,SPL,BOARD_NAME="Cubieboard"
 cubieboard_512               arm         armv7       sunxi               -              sunxi       sun4i:CUBIEBOARD_512,SPL,BOARD_NAME="Cubieboard-512"
 hackberry                    arm         armv7       sunxi               -              sunxi       sun4i:HACKBERRY,SPL,BOARD_NAME="Hackberry"
+hyundai_a7hd                 arm         armv7       sunxi               -              sunxi       sun4i:A7HD,SPL,BOARD_NAME="Hyundai-A7HD"
 mele_a1000                   arm         armv7       sunxi               -              sunxi       sun4i:MELE_A1000,SPL,BOARD_NAME="Mele-A1000"
+mini-x                       arm         armv7       sunxi               -              sunxi       sun4i:MINI_X,SPL,BOARD_NAME="Mini-X"
 sun4i                        arm         armv7       sunxi               -              sunxi       sun4i:BOARD_NAME="A10-EVB"
 sun4i_sdcon                  arm         armv7       sunxi               -              sunxi       sun4i:BOARD_NAME="A10-EVB",UART0_PORT_F
 sun5i                        arm         armv7       sunxi               -              sunxi       sun5i:BOARD_NAME="A13-EVB"
