ARM sunxi: Add SPL definitions for A13 OLinuXIno and Mele A1000 boards
From: Henrik Nordstrom <henrik@henriknordstrom.net>

Signed-off-by: Henrik Nordstrom <henrik@henriknordstrom.net>

--- a/boards.cfg
+++ b/boards.cfg
@@ -288,6 +288,8 @@ whistler                     arm         armv7:arm720t whistler          nvidia 
 colibri_t20_iris             arm         armv7:arm720t colibri_t20_iris  toradex        tegra20
 u8500_href                   arm         armv7       u8500               st-ericsson    u8500
 snowball                     arm         armv7       snowball               st-ericsson    u8500
+a13_olinuxino                arm         armv7       sunxi               -              sunxi       sun5i:A13_OLINUXINO,SPL,BOARD_NAME="A13-OlinuXino"
+mele_a1000                   arm         armv7       sunxi               -              sunxi       sun4i:MELE_A1000,SPL,BOARD_NAME="Mele-A1000"
 sun4i                        arm         armv7       sunxi               -              sunxi       sun4i:BOARD_NAME="A10-EVB"
 sun4i_sdcon                  arm         armv7       sunxi               -              sunxi       sun4i:BOARD_NAME="A10-EVB",UART0_PORT_F
 sun5i                        arm         armv7       sunxi               -              sunxi       sun5i:BOARD_NAME="A13-EVB"
