--- a/board/sunxi/Makefile
+++ b/board/sunxi/Makefile
@@ -29,6 +29,7 @@ COBJS-y	:= board.o
 COBJS-$(CONFIG_A13_OLINUXINO)	+= dram_a13_olinuxino.o
 COBJS-$(CONFIG_CUBIEBOARD)	+= dram_cubieboard.o
 COBJS-$(CONFIG_CUBIEBOARD_512)	+= dram_cubieboard_512.o
+COBJS-$(CONFIG_HACKBERRY)	+= dram_hackberry.o
 COBJS-$(CONFIG_MELE_A1000)	+= dram_mele_a1000.o
 
 COBJS	:= $(COBJS-y)
