--- a/boards.cfg
+++ b/boards.cfg
@@ -291,6 +291,7 @@ snowball                     arm         armv7       snowball               st-e
 a13_olinuxino                arm         armv7       sunxi               -              sunxi       sun5i:A13_OLINUXINO,SPL,BOARD_NAME="A13-OlinuXino"
 cubieboard                   arm         armv7       sunxi               -              sunxi       sun4i:CUBIEBOARD,SPL,BOARD_NAME="Cubieboard"
 cubieboard_512               arm         armv7       sunxi               -              sunxi       sun4i:CUBIEBOARD_512,SPL,BOARD_NAME="Cubieboard-512"
+hackberry                    arm         armv7       sunxi               -              sunxi       sun4i:HACKBERRY,SPL,BOARD_NAME="Hackberry"
 mele_a1000                   arm         armv7       sunxi               -              sunxi       sun4i:MELE_A1000,SPL,BOARD_NAME="Mele-A1000"
 sun4i                        arm         armv7       sunxi               -              sunxi       sun4i:BOARD_NAME="A10-EVB"
 sun4i_sdcon                  arm         armv7       sunxi               -              sunxi       sun4i:BOARD_NAME="A10-EVB",UART0_PORT_F
