ARM sunxi: add SPL board definition for cubieboard
From: Henrik Nordstrom <henrik@henriknordstrom.net>
Signed-off-by: Alejandro Mery <amery@geeks.cl>
Signed-off-by: Henrik Nordstrom <henrik@henriknordstrom.net>
Signed-off-by: Stefan Roese <sr@denx.de>

--- a/board/sunxi/Makefile
+++ b/board/sunxi/Makefile
@@ -27,6 +27,8 @@ LIB	:= $(obj)lib$(BOARD).o
 
 COBJS-y	:= board.o
 COBJS-$(CONFIG_A13_OLINUXINO)	+= dram_a13_olinuxino.o
+COBJS-$(CONFIG_CUBIEBOARD)	+= dram_cubieboard.o
+COBJS-$(CONFIG_CUBIEBOARD_512)	+= dram_cubieboard_512.o
 COBJS-$(CONFIG_MELE_A1000)	+= dram_mele_a1000.o
 
 COBJS	:= $(COBJS-y)
