--- a/boards.cfg
+++ b/boards.cfg
@@ -289,6 +289,8 @@ colibri_t20_iris             arm         armv7:arm720t colibri_t20_iris  toradex
 u8500_href                   arm         armv7       u8500               st-ericsson    u8500
 snowball                     arm         armv7       snowball               st-ericsson    u8500
 a13_olinuxino                arm         armv7       sunxi               -              sunxi       sun5i:A13_OLINUXINO,SPL,BOARD_NAME="A13-OlinuXino"
+cubieboard                   arm         armv7       sunxi               -              sunxi       sun4i:CUBIEBOARD,SPL,BOARD_NAME="Cubieboard"
+cubieboard_512               arm         armv7       sunxi               -              sunxi       sun4i:CUBIEBOARD_512,SPL,BOARD_NAME="Cubieboard-512"
 mele_a1000                   arm         armv7       sunxi               -              sunxi       sun4i:MELE_A1000,SPL,BOARD_NAME="Mele-A1000"
 sun4i                        arm         armv7       sunxi               -              sunxi       sun4i:BOARD_NAME="A10-EVB"
 sun4i_sdcon                  arm         armv7       sunxi               -              sunxi       sun4i:BOARD_NAME="A10-EVB",UART0_PORT_F
